# graphix-symbolic

./: LICENSE  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
graphix_symbolic/: __init__.py  sympy_parameter.py
tests/: conftest.py  test_sympy_parameter.py
