[build-system]
requires = ["setuptools", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "graphix-symbolic"
authors = [{ name = "Shinichi Sunami", email = "shinichi.sunami@gmail.com" }]
maintainers = [
    { name = "Shinichi Sunami", email = "shinichi.sunami@gmail.com" },
]
license = { file = "LICENSE" }
description = "Symbolic plugin for graphix"
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Physics",
]
requires-python = ">=3.8,<3.12"
dynamic = ["version"]
dependencies = [
    "graphix>=0.2.15",
    "sympy>=1.9",
]
[project.optional-dependencies]
dev = [
    "black==24.4.0",
    "isort==5.13.2",
    "pytest",
    "parameterized",
    "tox",
]

[project.urls]
Documentation = "https://graphix.readthedocs.io"
"Bug Tracker" = "https://github.com/TeamGraphix/graphix/issues"

[tool.setuptools_scm]
version_file = "graphix_symbolic/_version.py"

[tool.ruff]
line-length = 120
extend-exclude = ["docs"]

[tool.ruff.lint]
extend-select = [
  "UP",
  "NPY",
  "A",
  "B",
  "W",
  "PLE",
  "PLW",
  "FA",
  "RUF",
  "PERF",
  "TCH",
  "I",
]
ignore = [
  # TODO: Resolve this immediately
  "NPY002", # Use np.random.Generator
  "E74",    # Ambiguous name
]

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint.extend-per-file-ignores]
"__init__.py" = [
  "F401", # Unused import
]
"examples/*.py" = [
  "E402", # Import not at top of file
  "B018", # Useless expression
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"
